# expert-among-us

./: .gitignore  README.md  install-cpu.ps1  install-cpu.sh  install-gpu.ps1  install-gpu.sh  pyproject.toml  run-mcp.ps1  run-mcp.sh  run.bat  run.ps1  run.sh
case-studies/: summary-prompt.md  summary.md
case-studies/OpenRA/: Airplanes turning, with MCP.md  Airplanes turning, without MCP.md  Flame tank, with MCP.md  Flame tank, without MCP.md  New campaign, with MCP.md  New campaign, without MCP.md  Voxel renderer, with MCP.md  Voxel renderer, without MCP.md
src/expert_among_us/: __init__.py  __main__.py  __mcp__.py
src/expert_among_us/api/: __init__.py  context.py  exceptions.py  models.py  operations.py  streaming.py
src/expert_among_us/config/: __init__.py  settings.py
src/expert_among_us/core/: __init__.py  conversation.py  indexer.py  promptgen.py  searcher.py
src/expert_among_us/embeddings/: __init__.py  base.py  bedrock.py  factory.py  local.py
src/expert_among_us/llm/: __init__.py  auto_detect.py  base.py  bedrock.py  claude_code.py  factory.py  (+1 more)
tests/: __init__.py  conftest.py
tests/test_core/: test_conversation.py  test_indexer_deletion.py  test_indexer_progress.py  test_promptgen.py  test_promptgen_edge_cases.py  test_searcher.py
tests/test_db/: __init__.py  test_metadata_sqlite.py  test_metadata_sqlite_compression.py  test_vector_chroma.py  test_vector_chroma_batching.py
tests/test_embeddings/: test_bedrock.py  test_local.py
tests/test_integration/: __init__.py  test_openai_integration.py  test_prompt_flow.py
tests/test_llm/: __init__.py  test_auto_detect.py  test_base.py  test_bedrock.py  test_claude_code.py  test_factory.py  test_openai_compatible.py
tests/test_models/: test_changelist.py  test_changelist_truncation.py  test_expert.py  test_query.py  test_query_result.py
tests/test_utils/: test_chunking.py  test_compression.py  test_debug.py  test_sanitization.py  test_truncate.py
tests/test_vcs/: __init__.py  test_detector.py  test_git.py  test_perforce.py
(+30 files in other folders)
