[project]
name = "expert-among-us"
version = "0.1.0"
description = "Queryable expert from commit history using LLM and embeddings"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Expert Among Us Contributors"}
]

dependencies = [
    # Core frameworks
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    # LLM APIs
    "openai>=1.0.0",
    # CLI
    "click>=8.1,<9.0",
    "rich>=13.0,<14.0", # For nice CLI output
    # VCS
    "gitpython>=3.1,<4.0",
    # AWS/Bedrock
    "boto3>=1.34,<2.0",
    "botocore>=1.34,<2.0",
    # Embeddings
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    # Databases
    "chromadb>=0.4,<0.5",
    "numpy>=1.22,<2.0",  # Pin numpy < 2.0 for ChromaDB compatibility
    # UV
    "uv>=0.1,<1.0",
    # Utilities
    "python-dateutil>=2.8,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-cov>=4.1,<5.0",
    "black>=23.0,<24.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.7,<2.0",
]

[project.scripts]
expert-among-us = "expert_among_us.__main__:main"

[build-system]
requires = ["hatchling", "uv>=0.1"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.1"

[dependency-groups]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-cov>=4.1,<5.0",
    "black>=23.0,<24.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.7,<2.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=expert_among_us",
    "--cov-report=term-missing",
    "--cov-report=html",
]
